[package]
name = "ebur128"
version = "0.1.0"
authors = ["uwepa"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ebur128-sys = { path = "../ebur128-sys" }
libc = "0.2.65"
num-traits = "0.2"
num-derive = "0.3"
